<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.netxms</groupId>
    <artifactId>nxmc</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>nxmc</name>
    <description>NetXMS Management Console</description>
    <url>http://www.netxms.org</url>

    <licenses>
        <license>
            <name>GNU General Public License (GPL) v2</name>
            <url>http://www.gnu.org/licenses/gpl2.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:https://github.com/netxms/netxms</connection>
        <developerConnection>scm:git:ssh://github.com/netxms/netxms</developerConnection>
        <url>https://github.com/netxms/netxms</url>
    </scm>
    <developers>
        <developer>
            <id>victor.kirhenshtein</id>
            <name>Victor Kirhenshtein</name>
            <email>victor@netxms.org</email>
            <organization>Raden Solutions</organization>
            <organizationUrl>http://www.radensolutions.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Europe/Riga</timezone>
        </developer>
    </developers>
    <issueManagement>
        <system>Redmine</system>
        <url>https://dev.raden.solutions/projects/netxms</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <build.finalName>${project.artifactId}</build.finalName>
        <lib.scope>compile</lib.scope>
        <swt.version>3.116.0</swt.version>
    </properties>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
            <os>
                <family>windows</family>
            </os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <scope>${lib.scope}</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.eclipse.platform</groupId>
                            <artifactId>org.eclipse.swt</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
            <os>
                <name>Linux</name>
            </os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <scope>${lib.scope}</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.eclipse.platform</groupId>
                            <artifactId>org.eclipse.swt</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>macos</id>
            <activation>
            <os>
                <name>Mac OS X</name>
            </os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <scope>${lib.scope}</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.eclipse.platform</groupId>
                            <artifactId>org.eclipse.swt</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.netxms</groupId>
            <artifactId>netxms-base</artifactId>
            <version>${project.version}</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.netxms</groupId>
            <artifactId>netxms-client</artifactId>
            <version>${project.version}</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.equinox.common</artifactId>
            <version>3.14.100</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.core.commands</artifactId>
            <version>3.9.800</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.jface</artifactId>
            <version>3.22.100</version>
            <scope>${lib.scope}</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.jface.text</artifactId>
            <version>3.17.0</version>
            <scope>${lib.scope}</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.core.runtime</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.text</artifactId>
            <version>3.11.0</version>
            <scope>${lib.scope}</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.core.runtime</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.equinox.preferences</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.netxms</groupId>
            <artifactId>swtchart</artifactId>
            <version>1.1</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gettext-commons</groupId>
            <artifactId>gettext-commons</artifactId>
            <version>0.9.8</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.birt</groupId>
            <artifactId>birt-core</artifactId>
            <version>4.8.0</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.birt</groupId>
            <artifactId>birt-chart-engine</artifactId>
            <version>4.8.0</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.birt</groupId>
            <artifactId>birt-chart-device-swt</artifactId>
            <version>4.8.0</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.common</artifactId>
            <version>2.15.0</version>
            <scope>${lib.scope}</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.ecore</artifactId>
            <version>2.15.0</version>
            <scope>${lib.scope}</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${build.finalName}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.netxms.nxmc.Startup</mainClass>
			    <addClasspath>true</addClasspath>
			    <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
	    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
